--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,6 +1,14 @@
-
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
+
 body {
-    background-color: blue;
+    background-color: #f3f3ff;
+}
+
+
+.post-tag {
+    font-size: 14px;
+    padding: 2px 8px;
+    border: 1px #ccc solid;
+    margin-right: 10px;
 }
