--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,11 @@ layout: default
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       {%- for post in posts -%}
       <li>
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
+        {%- assign thisdate = post.date | date: date_format -%}
+        {%- if prevdate != thisdate -%}
+          <span class="post-meta">{{ post.date | date: date_format }}</span>
+          {%- assign prevdate = post.date | date: date_format -%}
+        {%- endif -%}
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
