--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -7,8 +7,21 @@ body {
 
 
 .post-tag {
-    font-size: 14px;
-    padding: 2px 8px;
+    font-size: 12px;
+    padding: 1px 6px;
+    color: #ccc;
     border: 1px #ccc solid;
+    cursor: default;
     margin-right: 10px;
+}
+
+.post-list > li {
+    margin-bottom: 2px;
+}
+.post-list > li > h3 {
+    margin-bottom: 2px;
+}
+.post-meta {
+    color: #446;
+    border-bottom: 1px #ccc solid;
 }
