Update background color

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -2,7 +2,7 @@
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 
 body {
-    background-color: #f3f3ff;
+    background-color: #e9e9e9;
 }
 
 
